--- a/assets/resources/tower_config.json
+++ b/assets/resources/tower_config.json
@@ -3,13 +3,15 @@
 	{
 		"damage" : [1,2,3],
 		"actack_range" : [100,150,200],
-		"look_range" : 300
+		"look_range" : 300,
+		"shoot_dt" : [0.5,0.4,0.3]
 	},
 
 	"tower_b" :
 	{
 		"damage" : [2,3,4],
 		"actack_range" : [150,200,250],
-		"look_range" : 400
+		"look_range" : 400,
+		"shoot_dt" : [0.5,0.4,0.3]
 	}
 }
